src/test/ui/transmutability/visibility/should_reject_if_dst_has_private_variant.stderr
error[E0277]: the trait bound `Dst: BikeshedIntrinsicFrom<Src, test::Context, false, false, false, false>` is not satisfied
  --> $DIR/should_reject_if_dst_has_private_variant.rs:37:41
   |
LL |     assert::is_transmutable::<src::Src, dst::Dst, Context>();
   |                                         ^^^^^^^^ the trait `BikeshedIntrinsicFrom<Src, test::Context, false, false, false, false>` is not implemented for `Dst`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/should_reject_if_dst_has_private_variant.rs:13:14
   |
LL |     pub fn is_transmutable<Src, Dst, Context>()
   |            --------------- required by a bound in this
LL |     where
LL |         Dst: BikeshedIntrinsicFrom<Src, Context, false, false, false, false>
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
